<resources>
    <string name="app_name">O Sindico</string>
    <string name="preferencesOSindico">preferencesOSindico</string>
    <string name="user_token">token</string>
    <string name="user_name">name</string>
    <string name="user_email">email</string>
    <string name="user_type">tipo</string>
    <string name="msg_name_error">Nome inválido. Tente um nome com pelo menos 6 caracteres.</string>
    <string name="msg_phone_error">Este formato de número de telefone não é válido.</string>
    <string name="msg_street_error">Insira uma rua valida.</string>
    <string name="msg_condo_number_error">Insira um número valido.</string>
    <string name="msg_neighborhood_error">Insira um bairro valido</string>
    <string name="msg_city_error">Insira uma cidade valida.</string>
    <string name="msg_zipcode_error">Insira um CEP valido</string>
    <string name="msg_state_error">Insira um estado valido</string>
    <string name="msg_country_error">Insira um pais valido</string>
    <string name="msg_server_error">Erro na requisição.</string>
    <string name="label_register">Cadastrar</string>
    <string name="label_next">Proximo</string>
    <string name="msg_syndic_email_error">Email inválido. Use apenas letras (a-z), números e pontos.</string>
    <string name="msg_syndic_password_error">Senha inválida. Tente uma senha com pelo menos 8 caracteres.</string>
    <string name="msg_syndic_confirm_password_error">Essas senhas não coincidem. Tentar novamente?</string>
    <string name="msg_address_error">Insira um endereço valido.</string>
    <string name="msg_registration_success">Cadastrado com sucesso</string>
    <string name="msg_success_request">Morador atualizado</string>
    <string name="msg_success_service_request">Solicitação enviada com sucesso para o sindico</string>
    <string name="msg_list_empty">Não existem solicitações de moradores no momento.</string>
    <string name="msg_success_send_message">Mensagem enviada com sucesso.</string>
    <string name="msg_error_message">Mensagem inválida. O tamanho minimo de uma mensagem é de 10 caracteres.</string>
    <string name="msg_error_message_null">Campo Obrigátorio.</string>

    <string-array name="states">
        <item>"*Estado"</item>
        <item>"Acre (AC)"</item>
        <item>"Alagoas (AL)"</item>
        <item>"Amapá (AP)"</item>
        <item>"Amazonas (AM)"</item>
        <item>"Bahia (BA)"</item>
        <item>"Ceará (CE)"</item>
        <item>"Distrito Federal (DF)"</item>
        <item>"Espírito Santo (ES)"</item>
        <item>"Goiás (GO)"</item>
        <item>"Maranhão (MA)"</item>
        <item>"Mato Grosso (MT)"</item>
        <item>"Mato Grosso do Sul (MS)"</item>
        <item>"Minas Gerais (MG)"</item>
        <item>"Pará (PA)"</item>
        <item>"Paraíba (PB)"</item>
        <item>"Paraná (PR)"</item>
        <item>"Pernambuco (PE)"</item>
        <item>"Piauí (PI)"</item>
        <item>"Rio de Janeiro (RJ)"</item>
        <item>"Rio Grande do Norte (RN)"</item>
        <item>"Rio Grande do Sul (RS)"</item>
        <item>"Rondônia (RO)"</item>
        <item>"Roraima (RR)"</item>
        <item>"Santa Catarina (SC)"</item>
        <item>"São Paulo (SP)"</item>
        <item>"Sergipe (SE)"</item>
        <item>"Tocantins (TO)"</item>
    </string-array>

    <string-array name="user_types">
        <item>"Morador"</item>
        <item>"Síndico"</item>
    </string-array>
    <string name="title_activity_navigation_dweller">NavigationDwellerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">Página Inicial</string>
    <string name="nav_messages">Mensagens</string>
    <string name="nav_calendar">Calendário</string>
    <string name="nav_my_condo">Meu condomínio</string>
    <string name="nav_settings">Configurações</string>
    <string name="nav_about">Sobre</string>
    <string name="nav_logout">Sair</string>
    <string name="title_activity_navigation_syndic">NavigationSyndicActivity</string>

    <string name="action_settings">Settings</string>

    <string name="prefs_theme_key">theme</string>
    <string name="label_new_rule">Cadastrar</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_rules">Regras do condominio</string>
    <string name="nav_dweller_list">Lista de moradores</string>
    <string name="nav_dweller_requests">Novos moradores</string>
    <string name="label_problem_description">Descreva em detalhes a solicitação de serviço</string>
    <string name="label_send">Enviar</string>
    <string name="label_title_request_service">Solicitar serviço</string>
    <string name="label_title_request">Titulo da solicitação de serviço</string>
    <string name="msg_token_error">Token invalido.</string>
    <string name="msg_title_error">Titulo invalido. Tente inserir um titulo com pelo menos 5 caracteres</string>
    <string name="msg_description_error">Descrição invalida. Tente inserir uma descrição com pelo menos 10 caracteres</string>
    <string name="nav_service_request">Solicitar serviço</string>
    <string name="nav_rules_list">Regras do condominio</string>

</resources>
