<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_condo_syndic"
            android:icon="@drawable/ic_home_syndic"
            android:title="@string/nav_my_condo" />
        <item
            android:id="@+id/nav_messages_syndic"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_messages" />
        <item
            android:id="@+id/nav_calendar_syndic"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_calendar" />

        <item
            android:id="@+id/nav_settings_syndic"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about_syndic"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />
    </group>

    <item android:title="Opções">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
